# pySBD

./: README.md  _diag_test.py  analyze_differences.py  analyze_v2.py  analyze_v3.py  compare_splitters.py  final_verdicts.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
benchmarks/: short_string_benchmark.py
pysbd/: abbreviation_replacer.py  about.py  between_punctuation.py  cleaner.py  exclamation_words.py  languages.py  lists_item_replacer.py  processor.py  punctuation_replacer.py  segmenter.py  spacy_component.py  utils.py
pysbd/clean/: rules.py
pysbd/lang/: arabic.py  deutsch.py  japanese.py  kazakh.py  persian.py  slovak.py  spanish.py
pysbd/lang/common/: common.py  standard.py
sentencesplit/: abbreviation_replacer.py  processor.py
sentencesplit/lang/: chinese.py  french.py  japanese.py  slovak.py
sentencesplit/lang/common/: common.py
tests/: test_segmenter.py
tests/lang/: test_chinese.py  test_japanese.py  test_spanish.py
