[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysbd"
dynamic = ["version"]
description = "pysbd (Python Sentence Boundary Disambiguation) is a rule-based sentence boundary detection that works out-of-the-box across many languages."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Nipun Sadvilkar", email = "nipunsadvilkar@gmail.com" }
]
keywords = ["natural-language-processing", "nlp"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Text Processing",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.urls]
Homepage = "http://nipunsadvilkar.github.io/"
Repository = "https://github.com/nipunsadvilkar/pySBD"

[project.optional-dependencies]
benchmark = [
  "blingfire>=0.1.8",
  "nltk>=3.9",
  "spacy>=3.7",
  "stanza>=1.8",
  "syntok>=1.4.4",
]

[project.entry-points."spacy_factories"]
pysbd = "pysbd.spacy_component:PySBDFactory"

[dependency-groups]
dev = [
  "flake8>=7.1",
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.hatch.version]
path = "pysbd/about.py"

[tool.hatch.build.targets.wheel]
packages = ["pysbd"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
]
